--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://<swlog>.github.io/https://github.com/swlog/netflix-clone",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@testing-library/dom": "^10.4.1",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build" 
   },
   "eslintConfig": {
     "extends": [
@@ -44,4 +47,6 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   }
+  
 }
+
