--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,52 +1,53 @@
-{
-  "name": "netflix-clone",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://swlog.github.io/https://github.com/swlog/netflix-clone",
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.1.0",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.13.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-hot-toast": "^2.6.0",
-    "react-router-dom": "^7.10.1",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build", 
-    "deploy": "gh-pages -d build" 
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
-  }
-  
-}
+name: Deploy to GitHub Pages
 
+on:
+  # 'main' 브랜치에 푸시가 발생했을 때 워크플로우를 실행합니다.
+  push:
+    branches:
+      - main
+  
+  # 수동 실행을 허용합니다.
+  workflow_dispatch:
+
+# 이전 배포 작업이 완료될 때까지 새 작업이 시작되는 것을 방지합니다.
+concurrency:
+  cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.ref }}
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    environment: 
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: ⬇️ Checkout repository
+        uses: actions/checkout@v4
+      
+      # gh-pages 패키지 사용 시 SSH 키가 필요할 수 있으므로 권장되는 설정입니다.
+      # Deploy key를 사용하지 않고 기본 GITHUB_TOKEN을 사용하는 경우 생략 가능합니다.
+      # 이 워크플로우는 기본 GITHUB_TOKEN을 사용하도록 설정됩니다.
+
+      - name: ⚙️ Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20' # 사용 중인 Node.js 버전을 지정하세요.
+          cache: 'npm'
+
+      - name: 📦 Install dependencies
+        run: npm install
+
+      - name: Confi
+
+      - name: 🚀 Deploy to GitHub Pages using gh-pages
+        # `deploy` 스크립트를 실행합니다. (이는 내부적으로 `predeploy`(build)와 `deploy`(gh-pages -d build)를 실행합니다.)
+        run: npm run deploy
+        env:
+          # gh-pages 패키지가 배포를 위해 사용할 토큰을 설정합니다.
+          # GITHUB_TOKEN은 GitHub Actions가 기본적으로 제공하는 토큰입니다.
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: 🔗 Setup GitHub Pages URL
+        id: deployment
+        uses: actions/deploy-pages@v4 # 배포 URL을 환경에 설정합니다.
