--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/swlog/netflix-clone/",
+  "homepage": "https://swlog.github.io/netflix-clone",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@testing-library/dom": "^10.4.1",
@@ -49,5 +49,4 @@
   }
   
 }
-
 
